# samsift

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  README.rst  increment_version.py  requirements.txt  samsift.sh  setup.cfg  setup.py
.github/workflows/: ci.yml  publish.yml  release-check.yml
samsift/: __init__.py  increment_version.py  norm_sam.py  samsift  samsift.py  samsift_norm_sam.py  version.py
test/: Makefile  test.bam
tests/: Makefile  qnames.txt  test.bam  test.sam
tests/profiling/: Makefile
tests/tests/: .gitignore  Makefile  seqheadless.bam  test.sam
