[metadata]
name = samsift
version = attr: samsift.version.VERSION
description = SAMsift - sift your alignments
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/karel-brinda/samsift
author = Karel Brinda
author_email = karel.brinda@inria.fr
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Operating System :: Unix
    Environment :: Console
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = NGS SAM alignment

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pysam

[options.package_data]
samsift = *.py

[options.entry_points]
console_scripts =
    samsift = samsift.samsift:main
    samsift-norm-sam = samsift.samsift_norm_sam:main

